# docling-api

./: .gitignore  Dockerfile  Dockerfile.temp  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  main.py  mps.py  pyproject.toml  requirements.txt  run.py
