[tool.poetry]
name = "document-to-markdown"
version = "0.1.0"
description = ""
authors = ["pryamm <pryamm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
docling = "^2.3.1"
python-multipart = "^0.0.17"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
